--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
   
   <main class="aags">
     <h2>Contact Us</h2>
-    <p>Email: support@mediprediction.com</p>
-    <p>Phone: +91 9876543210</p>
-    <p>Address: 123 Health St, Care City, India</p>
+    <p>Email: mediprediction@gmail.com</p>
+    <p>Phone: +91 8895956363</p>
+    <p>Address: National Institute Of Science and Technology (NIST), Brahmapur, Odisha, India</p>
   </main>
 
   <section id="faq" class="faq">
