--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <h3>What Our Users Say</h3>
       <blockquote>
         <p>“MediPrediction helped me detect a serious condition early. I’m so grateful!”</p>
-        <footer>- Bahubali Singh</footer>
+        <footer>- <b>Bahubali Singh</b></footer>
       </blockquote>
     </div>
   </section>
