--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
       </div>
 
       <div class="feature-box">
-        <img src="https://media-hosting.imagekit.io/2cd911157536439d/Medical%20prescription-pana.png?Expires=1839753508&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=oG1Nsg5KRIA0N0R~KXGRY0z~Xr1ROc5Yl~MchBIWM6mIP-QmX6Q4MOGgbfgqZwCuTF~PtZqFvOVsbP6H6opzyXiIUtV60bWitkn27MMISi2bMewwnMN-uvSfpTfBmrd~53WpVUZDRBV1tC9UB9gAvCVertetzRtHPf5F0TtstD8xCOiy5dlGc4P95qPNNgvbSGhh4Y6WLlBzRDPm67BgTDCoXOaGv4LxjJgqee5n~P98HC0mcLwb73DLFtIt8jb4ki~oip7REV3onv0n5hcoi~MmYrs1DCOxosGuGuEYg5QSCY3Te5GNPXVDKvv2e7O34AbxIZ93I43Dr6yOfGp6aQ__" alt="Instant Suggestions" class="feature-icon">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747733952562-Instant_Suggestions_PGs0IMZ9s.png" alt="Instant Suggestions" class="feature-icon">
         <h4>Instant Suggestions</h4>
         <p>Receive tailored recommendations for treatment and care based on your inputs.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://media-hosting.imagekit.io/28c0888ab58949ed/Dark%20analytics-bro.png?Expires=1839754044&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=B-QFddt805U2aX~58DD-Xl4CHjK~pqSOp1ljRib5MwZr9qV3bOzxrVnXi8B5cm2YSGZjfjfNduBx9LyH3Z9EVeuwYVtLSh-tNBJ20wQQrvQmEIeYtjQxnI1R9g7lIY3oGsxFLzn1iN2u~KRpGEUmTGFPdYkocpBHGBVXRZMkcUVT-klUiP6fSSpY1Urg4dcLIOxB4NNXZAr0xaZzFVnpDqOo7f9yZaKstlMWNwYnTn9Emmdo6oCczBqm1~vwOrDq6XN3hQvBizEaxPiYC7EauMgdgPcDH~juKhSA-JkKVSXrZ18FcDm1pYkRB7uZwFh1~40jM4DJJIxp0Ppfdc6kcg__" alt="Dashboard" class="feature-icon">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734003339-User-Freindly_2U1A8Yg2oE.png" alt="Dashboard" class="feature-icon">
         <h4>User-Friendly Dashboard</h4>
         <p>Track your reports, get insights, and manage your health all in one place.</p>
       </div>
