--- a/index.html
+++ b/index.html
@@ -63,31 +63,31 @@
       </div>
 
       <div class="feature-box">
-        <img src="https://media-hosting.imagekit.io/a9b00679c75e49e7/Safe-bro.png?Expires=1839754043&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=VodTKMdkpUL3Wlt1M8nZxQ2G-UWvtfJgXR-0kGtCG3OC8wqhlNuKfi7D48JGeKMBu9ubE1hXk5pWS6-3SjIhFasU8Ze8t535RjvGRZWg9-YkTj~lqPTXD9mSuHttq3kPM9rLhSVR8s9FSMCjhsXEqDIoF3UyEa7EZ2f-JPaUddMq0efEoK9B2-RIWdJXj1CaerscoJ0WGPORLU~i26EFacXkAWVhN-XByI4yPbUwjuTi4TXWqWgzpieYtC7F2EHilD58w1O8mZU4JhCCnC4bQaOo3oauiph~7g19HUPoB76z2uy7lKXu4r8wmfRLwJsH2N7X3fn3m2i7Xt7UXHsw7g__" alt="Security" class="feature-icon">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734511384-Secure_e1r4D_lnV.png" alt="Security" class="feature-icon">
         <h4>Secure & Confidential</h4>
         <p>We prioritize your privacy. All data is encrypted and securely stored.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://media-hosting.imagekit.io/fd29f8f838324236/Cash%20Payment-bro.png?Expires=1839754599&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=v3xARXs1tCMxVYuFE3MpVifsq9z~1Bq8YBaT0pifktwmOHW8qjK2zpqj-f-nKOTcqa248A7O5h-uohEGx1QdjUC~v07bfrT5ZWX65CQ445u~VaYp9DwjZnihVUMVT9p9z6KLSiv7HkonoCq4Bz-SxIh-aHeRin5ZbAAGFWn47zzwljc-04OBoS9am7mOI0xIzKl1YUMEywtaBtsuQT6XRv3Pd3O~tCAZnj48WSO9pagk17eDumFBve9xJ~4SWiDZRRJTynz-oc~AlDZ~5eC0JO35L1MYu1sTHCIqJOlllpHgWiEpGAFVbt9U6OsBaKSpjPXQs0hvKVkF2mvoRqdhNg__" alt="Affordable" class="feature-icon">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734559827-Affordable_U-MoJrLYJ.png" alt="Affordable" class="feature-icon">
         <h4>Affordable for Everyone</h4>
         <p>We believe healthcare should be accessible. Enjoy powerful tools at a low price.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://media-hosting.imagekit.io/f4ff00f9467643b4/Medical%20research-bro.png?Expires=1839754602&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=c~q-rdrEryqw7eTwhXsT~BujH5WxGheR7UlxWK1l1O3zP8S8tEovr1ZuvxOhutDdtw7G6y6E-lR9-jY1-kzfByKD1E4RY4oLMb~mO0huni2rNA4XhjLciSeB8k4zlqSSIQAcX1JkZGmWJMyjyfBrVq0Cd-z8~qWfjIJYjKnR4chpLH0IhD1O09I26m6mQj0RUNLRreN68l2HB-6eDPefz5wtVVyE93561-2nrCtmCbCqK3AjqRjX5GwXH3r4vdeuugL4WQKxULTfoSjefQKC-eBSGHoIVKrk4Ah5kVuir4KNNCE~L6povzIv0JBGgxbLvUMm0g4tioHerAhaaA4POQ__" alt="Medical Use" class="feature-icon">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734639001-Medical_Use_5qIrjuoTo.png" alt="Medical Use" class="feature-icon">
         <h4>Dedicated for Medical Use</h4>
         <p>Built by healthcare professionals and AI engineers to serve real medical needs.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://media-hosting.imagekit.io/35260d54c9ff4974/Service%2024_7-pana.png?Expires=1839756361&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=Nhbu5Rq3RfLpRmIbSyoT11AFp9-N9XcCZXARJ9zsvYDowDqfJmjUku1hetimePxUiY5ngfENiFLyLfZ2kWJvtPPmFt~icwNPUhYYjOMeUbN1cEjSTBB~0U5ay8rCSLPZxh-e9r5u4mJTkPhxP20yR0VAiik~01-P98gLW~L4dkfZHYHiSK1RJoIJkvek8CopAijqeQkcmXFDXRHPSpzNijmAFr8~dgWxBT7mazfWHdGjMRAyr59Pgwmxyw66NzpJE~6EsJEGUhR1PKWGqY4vUzMSSTz~qsJmlVzvnWCfgjqXVsEYKaoI2JIuot8-TPybrH-6AMnK~tUknaOGYVj6RA__" alt="24/7 AI" class="feature-icon">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734691257-Service_24_7-bro_f1giv0AX7.png" alt="24/7 AI" class="feature-icon">
         <h4>24/7 AI Support</h4>
         <p>Our AI assistant is available round the clock to answer your medical queries.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://media-hosting.imagekit.io/16893c860c3e467b/Untitled%20design%20(3).png?Expires=1839756451&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=LK2uVA2koR6u3mvvY32JlOxneWVan4~IW2O3NipP~THuUJsJgO0qpzH9MgXkeuc29kdbm4IrF6kO0DxYb5M-7b7rpZmy5SrIx345HjZH805Dmi8jFoZnDDVXQYmRmIKkzHUV~-KrNx9qilOmbjgaJszuSnl9gzT3XoXLbBCA8XWFe2h9QUPZliTeCFngXaFQY6n5cvOMMwzbw4uK72KpxHASzwG9IHkfD~B9Ab1RMXbtjpm7YCZLaKcuI58QS9dWe1Zf0nV3zLGs~Ia9kHsCV8VfS0-N1BwRHR1OdbTesI7BshJHfYKRv5YcPTaeXS~wpFMYySYlJNUbCV9YrKV0tg__" alt="Free Trial" class="feature-icon">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747735025175-14_Day_Trial_-lx4D0IlfD.png" alt="Free Trial" class="feature-icon">
         <h4>14-Day Free Trial</h4>
         <p>Try it out risk-free. Cancel anytime if you’re not satisfied.</p>
       </div>
