--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
 </head>
 <body>
   <header class="header">
+
+    <!-- Hamburger Menu Toggle -->
+<input type="checkbox" id="menu-toggle" class="menu-toggle">
+<label for="menu-toggle" class="hamburger">
+  <span></span>
+  <span></span>
+  <span></span>
+</label>
+
+<!-- Navigation Links -->
+<nav class="nav">
+  <a href="#features">Features</a>
+  <span class="separator">|</span>
+  <a href="#faq">About</a>
+  <span class="separator">|</span>
+  <a href="#contact">Contact</a>
+</nav>
+
     <div class="container header-content">
       <h1 class="logo">MediPrediction</h1>
       <nav class="nav">
