--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  
+  <div class="menu-toggle" id="menuToggle">
+    &#x22EE;
+  </div>
+
+  <nav class="mobile-menu" id="mobileMenu">
+    <a href="#features">Features</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  
   <header class="header">
  <div class="container header-content">
       <h1 class="logo">MediPrediction</h1>
