--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
   
   <div class="menu-toggle" id="menuToggle">
-    &#x22EE;
+  <span></span>
+  <span></span>
+  <span></span>
   </div>
 
   <nav class="mobile-menu" id="mobileMenu">
