--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   <a href="about.html">About</a>
   <span class="separator">|</span>
   <a href="contact.html">Contact</a>
+  <a href="login.html">Login</a>
+  <span class="separator">|</span>
+  <a href="signup.html">Sign Up</a>
     </nav>
     </div>
   </header>
