--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <span class="separator">|</span>
   <a href="contact.html">Contact</a>
   <span class="separator">|</span>
-  <a href="login.html">Login</a>
-  <span class="separator">|</span>
-  <a href="signup.html">Sign Up</a>
+  <a href="login.html" class="login-btn">Login</a>
+  <a href="signup.html" class="signup-btn">Sign Up</a>
+
     </nav>
     </div>
   </header>
