--- a/login.html
+++ b/login.html
@@ -80,7 +80,7 @@
   </header>
 
   <main>
-    <div class="form-container">
+    <div class="login-box">
       <h2>Login</h2>
       <form>
         <div class="form-group">
