--- a/login.html
+++ b/login.html
@@ -6,97 +6,66 @@
   <title>Login - MediPrediction</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    .form-container {
-      max-width: 400px;
-      margin: 80px auto;
-      background-color: white;
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .login-box {
+      border: 2px solid #007bff; /* Blue border */
+      background-color: #ffffff;  /* White background inside box */
       padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      width: 300px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    .form-container h2 {
-      margin-bottom: 20px;
+    .login-box h2 {
       text-align: center;
-    }
-
-    .form-group {
+      color: #007bff;
       margin-bottom: 20px;
     }
 
-    .form-group label {
-      display: block;
-      margin-bottom: 6px;
+    .login-box input[type="text"],
+    .login-box input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    .login-box button {
+      width: 100%;
+      padding: 10px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
       font-weight: bold;
     }
 
-    .form-group input {
-      width: 100%;
-      padding: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-
-    .btn-submit {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 6px;
-      background-color: #007bff;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    .btn-submit:hover {
+    .login-box button:hover {
       background-color: #0056b3;
-    }
-
-    .form-footer {
-      text-align: center;
-      margin-top: 15px;
-    }
-
-    .form-footer a {
-      color: #007bff;
-      text-decoration: none;
     }
   </style>
 </head>
 <body>
-  <header class="header">
-    <div class="container header-content">
-      <h1 class="logo">MediPrediction</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <span class="separator">|</span>
-        <a href="features.html">Features</a>
-        <span class="separator">|</span>
-        <a href="about.html">About</a>
-        <span class="separator">|</span>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
 
-  <main>
-    <div class="login-box">
-      <h2>Login</h2>
-      <form>
-        <div class="form-group">
-          <label for="login-email">Email</label>
-          <input type="email" id="login-email" required />
-        </div>
-        <div class="form-group">
-          <label for="login-password">Password</label>
-          <input type="password" id="login-password" required />
-        </div>
-        <button type="submit" class="btn-submit">Login</button>
-      </form>
-      <div class="form-footer">
-        Don't have an account? <a href="signup.html">Sign Up</a>
-      </div>
-    </div>
-  </main>
+  <div class="login-box">
+    <h2>Login</h2>
+    <form action="login_process.php" method="POST">
+      <input type="text" name="username" placeholder="Username" required />
+      <input type="password" name="password" placeholder="Password" required />
+      <button type="submit">Login</button>
+    </form>
+  </div>
+
 </body>
 </html>
