--- a/login.html
+++ b/login.html
@@ -4,25 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - MediPrediction</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
   <style>
     body {
+      margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
+      background-color: #f0f2f5;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      margin: 0;
     }
 
     .login-box {
       border: 2px solid #007bff; /* Blue border */
-      background-color: #ffffff;  /* White background inside box */
+      background-color: white;   /* White inside */
       padding: 30px;
-      border-radius: 10px;
       width: 300px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
     .login-box h2 {
@@ -35,7 +36,7 @@
     .login-box input[type="password"] {
       width: 100%;
       padding: 10px;
-      margin: 10px 0;
+      margin-bottom: 15px;
       border: 1px solid #ccc;
       border-radius: 5px;
     }
@@ -48,7 +49,6 @@
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      font-weight: bold;
     }
 
     .login-box button:hover {
@@ -57,7 +57,6 @@
   </style>
 </head>
 <body>
-
   <div class="login-box">
     <h2>Login</h2>
     <form action="login_process.php" method="POST">
@@ -66,6 +65,5 @@
       <button type="submit">Login</button>
     </form>
   </div>
-
 </body>
 </html>
