--- a/login.html
+++ b/login.html
@@ -4,42 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - MediPrediction</title>
-  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="header">
-    <div class="container header-content">
-      <h1 class="logo">MediPrediction</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <span class="separator">|</span>
-        <a href="features.html">Features</a>
-        <span class="separator">|</span>
-        <a href="about.html">About</a>
-        <span class="separator">|</span>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
 
-  <main>
-    <div class="form-container">
-      <h2>Login</h2>
-      <form>
-        <div class="form-group">
-          <label for="login-email">Email</label>
-          <input type="email" id="login-email" required />
-        </div>
-        <div class="form-group">
-          <label for="login-password">Password</label>
-          <input type="password" id="login-password" required />
-        </div>
-        <button type="submit" class="btn-submit">Login</button>
-      </form>
-      <div class="form-footer">
-        Don't have an account? <a href="signup.html">Sign Up</a>
-      </div>
-    </div>
-  </main>
+  <div class="login-box">
+    <h2>Login</h2>
+    <form action="login_process.php" method="POST">
+      <input type="text" name="username" placeholder="Username" required />
+      <input type="password" name="password" placeholder="Password" required />
+      <button type="submit">Login</button>
+    </form>
+  </div>
+
 </body>
 </html>
