--- a/login.html
+++ b/login.html
@@ -16,5 +16,11 @@
     </form>
   </div>
 
+  <div class="footer-links">
+  <a href="features.html">Features</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+  </div>
+
 </body>
 </html>
