--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  <div class="container header-content">
       <h1 class="logo">MediPrediction</h1>
       <nav class="nav">
-  <a href="features.html"><wbr>Features</wbr></a>
+  <a href="features.html">Features</a>
   <span class="separator">|</span>
   <a href="about.html">About</a>
   <span class="separator">|</span>
