--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <span class="separator">|</span>
   <p class="one"><a href="about.html">About</a></p>
   <span class="separator">|</span>
-  <p class="one">a href="contact.html">Contact</a></p>
+  <p class="one"><a href="contact.html">Contact</a></p>
   <span class="separator">|</span>
   <a href="login.html" class="login-btn">Login</a>
   <a href="signup.html" class="signup-btn">Sign Up</a>
