--- a/index.html
+++ b/index.html
@@ -1,31 +1,139 @@
 <!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>MediPrediction</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MediPrediction</title>
-  <link rel="stylesheet" href="style.css">
+  <title>MediPrediction - Smart Medical Diagnosis</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
-  <header>
-    <div class="logo">MediPrediction</div>
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="features.html">Features</a>
-      <a href="contact.html">Contact</a>
-      <a href="login.html" class="login-button">Login</a>
+<body>  
+  <header class="header">
+ <div class="container header-content">
+      <h1 class="logo">MediPrediction</h1>
+      <nav class="nav">
+  <a href="features.html">Features</a>
+  <span class="separator">|</span>
+  <p class="one"><a href="about.html">About</a></p>
+  <span class="separator">|</span>
+  <p class="one"><a href="contact.html">Contact</a></p>
+  <span class="separator">|</span>
+  <a href="login.html" class="login-btn">Login</a>
+  <a href="signup.html" class="signup-btn">Sign Up</a>
+
     </nav>
-  </header>
-  <main class="hero">
-    <div class="hero-content">
-      <h1>AI-Based Medical Diagnosis Platform</h1>
-      <p>Get accurate health predictions with our smart symptom checker.</p>
-      <a href="signup.html" class="btn">Get Started</a>
     </div>
-  </main>
-  <footer>
-    <p>&copy; 2025 MediPrediction. All rights reserved.</p>
+  </header>
+
+  <section class="hero">
+    <div class="container">
+      <img src="https://ik.imagekit.io/6ilngyaqa/1747677158708-Online_Doctor-bro__1__0V0TJKegj.png" alt="Doctor Illustration" class="hero-img">
+      <h1 class="main-heading">AI-Powered Medical Diagnosis Platform</h1>
+      <p class="sub-heading">Predict your illness early and get reliable solutions instantly. Your health partner, always one step ahead.</p>
+      <a href="nextpage.html" class="get-started-btn">Get Started</a>
+    </div>
+  </section>
+
+  <section id="features" class="features">
+    <div class="container">
+      <h3>Why Choose MediPrediction?</h3>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747733657694-Easy_Diagnosis_6kiZbehx0.png" alt="Easy Diagnosis" class="feature-icon">
+        <h4>Easy Diagnosis</h4>
+        <p>Just answer a few simple questions and our AI will predict your possible conditions.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747733952562-Instant_Suggestions_PGs0IMZ9s.png" alt="Instant Suggestions" class="feature-icon">
+        <h4>Instant Suggestions</h4>
+        <p>Receive tailored recommendations for treatment and care based on your inputs.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734003339-User-Freindly_2U1A8Yg2oE.png" alt="Dashboard" class="feature-icon">
+        <h4>User-Friendly Dashboard</h4>
+        <p>Track your reports, get insights, and manage your health all in one place.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734511384-Secure_e1r4D_lnV.png" alt="Security" class="feature-icon">
+        <h4>Secure & Confidential</h4>
+        <p>We prioritize your privacy. All data is encrypted and securely stored.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734559827-Affordable_U-MoJrLYJ.png" alt="Affordable" class="feature-icon">
+        <h4>Affordable for Everyone</h4>
+        <p>We believe healthcare should be accessible. Enjoy powerful tools at a low price.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734639001-Medical_Use_5qIrjuoTo.png" alt="Medical Use" class="feature-icon">
+        <h4>Dedicated for Medical Use</h4>
+        <p>Built by healthcare professionals and AI engineers to serve real medical needs.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734691257-Service_24_7-bro_f1giv0AX7.png" alt="24/7 AI" class="feature-icon">
+        <h4>24/7 AI Support</h4>
+        <p>Our AI assistant is available round the clock to answer your medical queries.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747735025175-14_Day_Trial_-lx4D0IlfD.png" alt="Free Trial" class="feature-icon">
+        <h4>14-Day Free Trial</h4>
+        <p>Try it out risk-free. Cancel anytime if you’re not satisfied.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="testimonials">
+    <div class="container">
+      <h3>What Our Users Say</h3>
+      <blockquote>
+        <p>“MediPrediction helped me detect a serious condition early. I’m so grateful!”</p>
+        <footer>- <b>Bahubali Singh</b></footer>
+      </blockquote>
+    </div>
+  </section>
+
+  <section id="faq" class="faq">
+    <div class="aags">
+      <h3>Frequently Asked Questions</h3>
+      <details>
+        <summary>Is MediPrediction a replacement for doctors?</summary>
+        <p>No, it’s a support tool. Always consult a doctor for final advice.</p>
+      </details>
+      <details>
+        <summary>How accurate is the diagnosis?</summary>
+        <p>Our system is trained with medical data and updated regularly for high accuracy.</p>
+      </details>
+      <details>
+        <summary>Can I use this for my family?</summary>
+        <p>Yes, you can add multiple profiles and manage family health easily.</p>
+      </details>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2025 MediPrediction. All rights reserved.</p>
+    </div>
   </footer>
+</body>
+</html>
+<!-- partial -->
+  
 </body>
 </html>
