--- a/login.html
+++ b/login.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - MediPrediction</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="form-container">
-    <form class="form-box" action="nextpage.html">
-      <h2>Login</h2>
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
-      </div>
-      <button type="submit" class="btn-submit">Login</button>
+
+  <div class="login-box">
+    <h2>Login</h2>
+    <form action="login_process.php" method="POST">
+      <input type="text" name="username" placeholder="Username" required />
+      <input type="password" name="password" placeholder="Password" required />
+      <button type="submit">Login</button>
     </form>
   </div>
+
+  <div class="footer-links">
+  <a href="features.html">Features</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+  </div>
+
 </body>
 </html>
