--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login - MediPrediction</title>
-
+  <link rel="stylesheet" href="style.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -55,6 +55,8 @@
       background-color: #0056b3 !important;
       color: white !important;
     }
+  
+  </style>
 </head>
 <body>
 
