--- a/signup.html
+++ b/signup.html
@@ -42,7 +42,7 @@
       padding: 12px;
       border: none;
       border-radius: 6px;
-      background-color: #28a745;
+      background-color: #007BFF;
       color: white;
       font-size: 16px;
       cursor: pointer;
