--- a/login.html
+++ b/login.html
@@ -60,6 +60,21 @@
 </head>
 <body>
 
+  <header class="header">
+    <div class="container header-content">
+      <h1 class="logo">MediPrediction</h1>
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <span class="separator">|</span>
+        <a href="features.html">Features</a>
+        <span class="separator">|</span>
+        <a href="about.html">About</a>
+        <span class="separator">|</span>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+   
   <div class="login-box">
     <h2>Login</h2>
     <form action="login_process.php" method="POST">
@@ -67,12 +82,6 @@
       <input type="password" name="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
-  </div>
-
-  <div class="footer-links">
-  <a href="features.html">Features</a>
-  <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
   </div>
 
 </body>
