--- a/login.html
+++ b/login.html
@@ -74,7 +74,8 @@
       </nav>
     </div>
   </header>
-   
+
+  <main>
   <div class="login-box">
     <h2>Login</h2>
     <form action="login_process.php" method="POST">
