--- a/login.html
+++ b/login.html
@@ -9,57 +9,85 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #f2f2f2;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       margin: 0;
     }
 
-    .login-box {
-      border: 2px solid #007bff;
-      background-color: #ffffff;
+    .login-container {
+      max-width: 400px;
+      margin: 80px auto;
+      background-color: white;
       padding: 30px;
       border-radius: 10px;
-      width: 300px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    .login-box h2 {
+    .login-container h2 {
       text-align: center;
       color: #007bff;
       margin-bottom: 20px;
     }
 
-    .login-box input[type="text"],
-    .login-box input[type="password"] {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+    .form-group {
+      margin-bottom: 20px;
     }
 
-    .login-box button {
+    .form-group input {
       width: 100%;
       padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+
+    .btn-login {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 6px;
       background-color: #007bff;
       color: white;
-      border: none;
-      border-radius: 5px;
+      font-size: 16px;
       cursor: pointer;
       font-weight: bold;
     }
 
-    .login-box button:hover {
-      background-color: #0056b3 !important;
-      color: white !important;
+    .btn-login:hover {
+      background-color: #0056b3;
     }
-  
+
+    .header {
+      background-color: white;
+      padding: 20px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .header-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1100px;
+      margin: auto;
+    }
+
+    .logo {
+      color: #007bff;
+      font-size: 24px;
+      margin: 0;
+    }
+
+    .nav a {
+      color: #007bff;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+
+    .separator {
+      color: #ccc;
+    }
   </style>
 </head>
 <body>
 
+  <!-- Header -->
   <header class="header">
     <div class="container header-content">
       <h1 class="logo">MediPrediction</h1>
@@ -75,15 +103,21 @@
     </div>
   </header>
 
+  <!-- Main Content -->
   <main>
-  <div class="login-box">
-    <h2>Login</h2>
-    <form action="login_process.php" method="POST">
-      <input type="text" name="username" placeholder="Username" required />
-      <input type="password" name="password" placeholder="Password" required />
-      <button type="submit">Login</button>
-    </form>
-  </div>
+    <div class="login-container">
+      <h2>Login</h2>
+      <form action="login_process.php" method="POST">
+        <div class="form-group">
+          <input type="text" name="username" placeholder="Username" required />
+        </div>
+        <div class="form-group">
+          <input type="password" name="password" placeholder="Password" required />
+        </div>
+        <button type="submit" class="btn-login">Login</button>
+      </form>
+    </div>
+  </main>
 
 </body>
 </html>
