--- a/login.html
+++ b/login.html
@@ -70,9 +70,9 @@
     }
 
     .logo {
-      color: #007bff;
-      font-size: 36px;
-      margin: 0;
+      font-size: 3rem;
+      color: #0077ff;
+      font-weight: 900;
     }
 
     .nav {
