--- a/login.html
+++ b/login.html
@@ -76,7 +76,11 @@
     }
 
     .nav {
-  margin-top: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background-color: white;
     }
     
     .nav a {
