--- a/login.html
+++ b/login.html
@@ -84,10 +84,14 @@
     }
     
     .nav a {
-      color: #007bff;
       text-decoration: none;
-      margin: 0 10px;
-      font-weight: bold;
+      color: #444;
+      font-weight: 600;
+      transition: color 0.3s;
+    }
+
+    .nav a:hover {
+      color: #0077ff;
     }
 
     .separator {
