--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1rem 2rem;
+      padding: 2rem;
       background-color: white;
     }
     
