--- a/login.html
+++ b/login.html
@@ -55,12 +55,14 @@
     }
 
     .header {
-      background-color: white;
-      padding: 20px;
-      border-bottom: 1px solid #ddd;
-      text-align: center;
+      background: #fff;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      padding: 1rem 0;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
-
+    
     .header-content {
       display: flex;
       justify-content: space-between;
