--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 2rem;
+      padding:1rem 2rem;
       background-color: white;
     }
     
