--- a/login.html
+++ b/login.html
@@ -31,6 +31,12 @@
       margin-bottom: 20px;
     }
 
+    .form-group label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: bold;
+    }
+    
     .form-group input {
       width: 100%;
       padding: 10px;
