--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
 
     .login-container h2 {
       text-align: center;
-      color: #007bff;
+      color: #000000;
       margin-bottom: 20px;
     }
 
