--- a/login.html
+++ b/login.html
@@ -113,9 +113,11 @@
       <h2>Login</h2>
       <form action="login_process.php" method="POST">
         <div class="form-group">
+          <label for="signup-name">Username</label>
           <input type="text" name="username" placeholder="Username" required />
         </div>
         <div class="form-group">
+          <label for="signup-email">Password</label>
           <input type="password" name="password" placeholder="Password" required />
         </div>
         <button type="submit" class="btn-login">Login</button>
