--- a/login.html
+++ b/login.html
@@ -37,6 +37,12 @@
       border: 1px solid #ccc;
     }
 
+    .form-group label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: bold;
+    }
+    
     .btn-login {
       width: 100%;
       padding: 12px;
@@ -113,11 +119,11 @@
       <h2>Login</h2>
       <form action="login_process.php" method="POST">
         <div class="form-group">
-          <label for="signup-name">Username</label>
+          <label for="login-name">Username</label>
           <input type="text" name="username" placeholder="Username" required />
         </div>
         <div class="form-group">
-          <label for="signup-email">Password</label>
+          <label for="login-pass">Password</label>
           <input type="password" name="password" placeholder="Password" required />
         </div>
         <button type="submit" class="btn-login">Login</button>
