--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <nav class="nav">
   <a href="features.html">Features</a>
   <span class="separator">|</span>
-  <p class="one"><a href="about.html">About</a></p>
+  <a href="about.html">About</a>
   <span class="separator">|</span>
-  <p class="one"><a href="contact.html">Contact</a></p>
+  <a href="contact.html">Contact</a>
   <span class="separator">|</span>
   <a href="login.html" class="login-btn">Login</a>
   <a href="signup.html" class="signup-btn">Sign Up</a>
