--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <h1 class="logo">MediPrediction</h1>
       <nav class="nav">
   <a href="features.html">Features</a>
-  
+  <span class="separator">|</span>
   <a href="about.html">About</a>
-  
+  <span class="separator">|</span>
   <a href="contact.html">Contact</a>
-  
+  <span class="separator">|</span>
   <a href="login.html" class="login-btn">Login</a>
   <a href="signup.html" class="signup-btn">Sign Up</a>
 
