--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sign Up - MediPrediction</title>
   <link rel="stylesheet" href="style.css" />
+
   <style>
+     body {
+      font-family: 'Inter', sans-serif;
+      line-height: 1.6;
+      color: #222;
+      background: #fff;
+    }
     .form-container {
       max-width: 400px;
       margin: 80px auto;
