--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <header class="header">
  <div class="container header-content">
       <h1 class="logo">MediPrediction</h1>
+      <div class="nav-links">
       <nav class="nav">
   <a href="features.html">Features</a>
   <span class="separator">|</span>
