--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>  
   <header class="header">
-      <h1 class="logo">MediPrediction</h1>
+    <nav class="nav">
+      <div class="logo">MediPrediction</div>
       <div class="nav-links">
-      <nav class="nav">
   <a href="features.html">Features</a>
   <span class="separator">|</span>
   <a href="about.html">About</a>
