--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>  
   <header class="header">
-    <nav class="nav">
+    <div class="container header-content">
       <div class="logo">MediPrediction</div>
       <div class="nav-links">
   <a href="features.html">Features</a>
