--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>  
   <header class="header">
     <div class="container header-content">
-      <div class="logo">MediPrediction</div>
-      <div class="nav-links">
+      <h1 class="logo">MediPrediction</h1>
+      <nav class="nav">
   <a href="features.html">Features</a>
   <span class="separator">|</span>
   <a href="about.html">About</a>
