--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <a href="contact.html">Contact</a>
   <span class="separator">|</span>
   <a href="login.html" class="login-btn">Login</a>
+  <span class="separator">|</span>
   <a href="signup.html" class="signup-btn">Sign Up</a>
 
     </nav>
