--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
 </head>
 <body>  
   <header class="header">
-    <div class="container header-content">
+ <div class="container header-content">
       <h1 class="logo">MediPrediction</h1>
       <nav class="nav">
   <a href="features.html">Features</a>
   <span class="separator">|</span>
-  <a href="about.html">About</a>
+  <p class="one"><a href="about.html">About</a></p>
   <span class="separator">|</span>
-  <a href="contact.html">Contact</a>
+  <p class="one"><a href="contact.html">Contact</a></p>
   <span class="separator">|</span>
   <a href="login.html" class="login-btn">Login</a>
-  <span class="separator">|</span>
   <a href="signup.html" class="signup-btn">Sign Up</a>
 
     </nav>
