--- a/index.html
+++ b/index.html
@@ -38,8 +38,55 @@
     <div class="container">
       <h3>Why Choose MediPrediction?</h3>
 
-      <!-- All feature boxes go here (you already have them correct) -->
-      <!-- Use your current <div class="feature-box"> blocks -->
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747733657694-Easy_Diagnosis_6kiZbehx0.png" alt="Easy Diagnosis" class="feature-icon">
+        <h4>Easy Diagnosis</h4>
+        <p>Just answer a few simple questions and our AI will predict your possible conditions.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747733952562-Instant_Suggestions_PGs0IMZ9s.png" alt="Instant Suggestions" class="feature-icon">
+        <h4>Instant Suggestions</h4>
+        <p>Receive tailored recommendations for treatment and care based on your inputs.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734003339-User-Freindly_2U1A8Yg2oE.png" alt="Dashboard" class="feature-icon">
+        <h4>User-Friendly Dashboard</h4>
+        <p>Track your reports, get insights, and manage your health all in one place.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734511384-Secure_e1r4D_lnV.png" alt="Security" class="feature-icon">
+        <h4>Secure & Confidential</h4>
+        <p>We prioritize your privacy. All data is encrypted and securely stored.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734559827-Affordable_U-MoJrLYJ.png" alt="Affordable" class="feature-icon">
+        <h4>Affordable for Everyone</h4>
+        <p>We believe healthcare should be accessible. Enjoy powerful tools at a low price.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734639001-Medical_Use_5qIrjuoTo.png" alt="Medical Use" class="feature-icon">
+        <h4>Dedicated for Medical Use</h4>
+        <p>Built by healthcare professionals and AI engineers to serve real medical needs.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747734691257-Service_24_7-bro_f1giv0AX7.png" alt="24/7 AI" class="feature-icon">
+        <h4>24/7 AI Support</h4>
+        <p>Our AI assistant is available round the clock to answer your medical queries.</p>
+      </div>
+
+      <div class="feature-box">
+        <img src="https://ik.imagekit.io/6ilngyaqa/1747735025175-14_Day_Trial_-lx4D0IlfD.png" alt="Free Trial" class="feature-icon">
+        <h4>14-Day Free Trial</h4>
+        <p>Try it out risk-free. Cancel anytime if you’re not satisfied.</p>
+      </div>
+    </div>
+  </section>
 
     </div>
   </section>
