--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>MediPrediction</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MediPrediction - Smart Medical Diagnosis</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
-
+<body>  
   <header class="header">
-    <div class="container header-content">
+ <div class="container header-content">
       <h1 class="logo">MediPrediction</h1>
       <nav class="nav">
-        <a href="features.html">Features</a>
-        <span class="separator">|</span>
-        <a href="about.html">About</a>
-        <span class="separator">|</span>
-        <a href="contact.html">Contact</a>
-        <span class="separator">|</span>
-        <a href="login.html" class="login-btn">Login</a>
-        <a href="signup.html" class="signup-btn">Sign Up</a>
-      </nav>
+  <a href="features.html">Features</a>
+  <span class="separator">|</span>
+  <p class="one"><a href="about.html">About</a></p>
+  <span class="separator">|</span>
+  <p class="one"><a href="contact.html">Contact</a></p>
+  <span class="separator">|</span>
+  <a href="login.html" class="login-btn">Login</a>
+  <a href="signup.html" class="signup-btn">Sign Up</a>
+
+    </nav>
     </div>
   </header>
 
@@ -34,7 +44,7 @@
     </div>
   </section>
 
-  <section class="features">
+  <section id="features" class="features">
     <div class="container">
       <h3>Why Choose MediPrediction?</h3>
 
@@ -88,9 +98,6 @@
     </div>
   </section>
 
-    </div>
-  </section>
-
   <section class="testimonials">
     <div class="container">
       <h3>What Our Users Say</h3>
@@ -101,7 +108,7 @@
     </div>
   </section>
 
-  <section class="faq">
+  <section id="faq" class="faq">
     <div class="aags">
       <h3>Frequently Asked Questions</h3>
       <details>
@@ -124,6 +131,9 @@
       <p>&copy; 2025 MediPrediction. All rights reserved.</p>
     </div>
   </footer>
-
+</body>
+</html>
+<!-- partial -->
+  
 </body>
 </html>
