--- a/signup.html
+++ b/signup.html
@@ -62,6 +62,31 @@
       color: #007bff;
       text-decoration: none;
     }
+
+    .logo {
+      font-size: 3rem;
+      color: #0077ff;
+      font-weight: 900;
+    }
+
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background-color: white;
+    }
+    
+    .nav a {
+      text-decoration: none;
+      color: #444;
+      font-weight: 600;
+      transition: color 0.3s;
+    }
+    
+    .nav a:hover {
+      color: #0077ff;
+    }
   </style>
 </head>
 <body>
