--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <section class="hero">
     <div class="container">
-      <img src="https://ibb.co/9m1VyX1H" alt="Doctor Illustration" class="hero-img">
+      <img src="https://im.ge/i/AI-Powered-Medical.vzRqIq" alt="Doctor Illustration" class="hero-img">
       <h1 class="main-heading">AI-Powered Medical Diagnosis Platform</h1>
       <p class="sub-heading">Predict your illness early and get reliable solutions instantly. Your health partner, always one step ahead.</p>
       <a href="nextpage.html" class="get-started-btn">Get Started</a>
