--- a/signup.html
+++ b/signup.html
@@ -107,6 +107,7 @@
   </header>
 
   <main>
+    <form action="signup_process.php" method="POST">
     <div class="form-container">
       <h2>Sign Up</h2>
       <form>
