--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <section class="hero">
     <div class="container">
-      <img src="https://github.com/mediprediction/mediprediction.site/blob/main/AI%20Powered%20Medical.png?raw=true" alt="Doctor Illustration" class="hero-img">
+      <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/AI%20Powered%20Medical.png" alt="Doctor Illustration" class="hero-img">
       <h1 class="main-heading">AI-Powered Medical Diagnosis Platform</h1>
       <p class="sub-heading">Predict your illness early and get reliable solutions instantly. Your health partner, always one step ahead.</p>
       <a href="nextpage.html" class="get-started-btn">Get Started</a>
@@ -91,7 +91,7 @@
       </div>
 
       <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747735025175-14_Day_Trial_-lx4D0IlfD.png" alt="Free Trial" class="feature-icon">
+        <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/14%20Day%20Trial.png" alt="Free Trial" class="feature-icon">
         <h4>14-Day Free Trial</h4>
         <p>Try it out risk-free. Cancel anytime if you’re not satisfied.</p>
       </div>
