--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <section class="hero">
     <div class="container">
-      <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/AI%20Powered%20Medical.png" alt="Doctor Illustration" class="hero-img">
+      <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/AI%20Powered%20Medical.png?raw=true" alt="Doctor Illustration" class="hero-img">
       <h1 class="main-heading">AI-Powered Medical Diagnosis Platform</h1>
       <p class="sub-heading">Predict your illness early and get reliable solutions instantly. Your health partner, always one step ahead.</p>
       <a href="nextpage.html" class="get-started-btn">Get Started</a>
@@ -49,49 +49,49 @@
       <h3>Why Choose MediPrediction?</h3>
 
       <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747733657694-Easy_Diagnosis_6kiZbehx0.png" alt="Easy Diagnosis" class="feature-icon">
+        <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/Easy%20Diagnosis.png?raw=true" alt="Easy Diagnosis" class="feature-icon">
         <h4>Easy Diagnosis</h4>
         <p>Just answer a few simple questions and our AI will predict your possible conditions.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747733952562-Instant_Suggestions_PGs0IMZ9s.png" alt="Instant Suggestions" class="feature-icon">
+        <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/Instant%20Suggestions.png?raw=true" alt="Instant Suggestions" class="feature-icon">
         <h4>Instant Suggestions</h4>
         <p>Receive tailored recommendations for treatment and care based on your inputs.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747734003339-User-Freindly_2U1A8Yg2oE.png" alt="Dashboard" class="feature-icon">
+        <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/User-Freindly.png?raw=true" alt="Dashboard" class="feature-icon">
         <h4>User-Friendly Dashboard</h4>
         <p>Track your reports, get insights, and manage your health all in one place.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747734511384-Secure_e1r4D_lnV.png" alt="Security" class="feature-icon">
+        <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/Secure.png?raw=true" alt="Security" class="feature-icon">
         <h4>Secure & Confidential</h4>
         <p>We prioritize your privacy. All data is encrypted and securely stored.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747734559827-Affordable_U-MoJrLYJ.png" alt="Affordable" class="feature-icon">
+        <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/Affordable.png?raw=true" alt="Affordable" class="feature-icon">
         <h4>Affordable for Everyone</h4>
         <p>We believe healthcare should be accessible. Enjoy powerful tools at a low price.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747734639001-Medical_Use_5qIrjuoTo.png" alt="Medical Use" class="feature-icon">
+        <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/Medical%20Use.png?raw=true" alt="Medical Use" class="feature-icon">
         <h4>Dedicated for Medical Use</h4>
         <p>Built by healthcare professionals and AI engineers to serve real medical needs.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747734691257-Service_24_7-bro_f1giv0AX7.png" alt="24/7 AI" class="feature-icon">
+        <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/Service%2024_7-bro.png?raw=true" alt="24/7 AI" class="feature-icon">
         <h4>24/7 AI Support</h4>
         <p>Our AI assistant is available round the clock to answer your medical queries.</p>
       </div>
 
       <div class="feature-box">
-        <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/14%20Day%20Trial.png" alt="Free Trial" class="feature-icon">
+        <img src="https://github.com/mediprediction/mediprediction.site/blob/main/images/14%20Day%20Trial.png?raw=true" alt="Free Trial" class="feature-icon">
         <h4>14-Day Free Trial</h4>
         <p>Try it out risk-free. Cancel anytime if you’re not satisfied.</p>
       </div>
